add: kMailerのボタンを非表示に設定
- ワークフロー共通
  - kMailerのアプリ上ボタンを非表示に

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -267,3 +267,13 @@
 .kintone-app-headermenu-space .easy-search-text {
   width: 200px !important;
 }
+
+/*
+ * --------------------------
+ * Plugin Design Toyokumo
+ * --------------------------
+ */
+/** kMailer **/
+.kmailer {
+  display: none;
+}
