add: 詳細画面のチェックボックスを表示するようにしました
- workflow_template
  - kintone UI Componentで詳細画面でチェックボックスを表示

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -277,3 +277,14 @@
 .kmailer {
   display: none;
 }
+
+/*
+ * --------------------------
+ * kintone UI Component v1
+ * --------------------------
+ */
+/** Checkbox **/
+.kuc-checkbox-1-13-0__group__select-menu[borderVisible] {
+  border: none;
+  padding: 0;
+}
