fix: チェックボックスのcssの詳細度を高くしました
- workflow_template.css
  - importantを追加

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -285,6 +285,6 @@
  */
 /** Checkbox **/
 .kuc-checkbox-1-13-0__group__select-menu[borderVisible] {
-  border: none;
-  padding: 0;
+  border: none !important;
+  padding: 0 !important;
 }
