add: 各種ボタンのデザインの修正を追加しました
- workflow_template.js
  - 一覧名の変更(「自分の対応待ち」)
- workflow_template.css
  - アクションボタンのデザインを追加

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -288,3 +288,24 @@
   border: none !important;
   padding: 0 !important;
 }
+
+/*
+ * --------------------------
+ * kintone
+ * --------------------------
+ */
+/** 複製ボタン **/
+.gaia-argoui-app-menu-copy.gaia-argoui-app-menu {
+  display: none;
+}
+
+/*
+ * --------------------------
+ * kintone action button design
+ * --------------------------
+ */
+/** アクションボタン **/
+.gaia-app-statusbar-action {
+  height: 42px !important;
+  background-color: #000080 !important;
+}
