fix: 「現在の作業者を変更」ボタンを非表示に設定しました
- workflow_template.css

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -309,3 +309,8 @@
   height: 42px !important;
   background-color: #000080 !important;
 }
+
+/** 原罪の作業者を変更 **/
+span.gaia-app-statusbar-action.gaia-app-status-reassign {
+  display: none;
+}
