add: 詳細画面でkucで表示しているチェックボックスの色を分かりやすくしました
- workflow_template.css
  - 詳細画面でのkucチェックボックスの表示色を濃く設定

--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -99,6 +99,17 @@
   bottom: -1.4px;
 }
 
+/* 詳細画面のチェックボックス */
+label.kuc-checkbox-1-13-0__group__select-menu__item__label {
+  color: #333 !important;
+}
+svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon > rect {
+  stroke: #333 !important;
+}
+svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon > path {
+  fill: #333 !important;
+}
+
 /*** Attazoo Tab+ ***/
 #displayTabs li {
   padding: 10px 24px !important;
