--- a/kintone/apps/common/workflow/css/workflow_template.css
+++ b/kintone/apps/common/workflow/css/workflow_template.css
@@ -103,10 +103,12 @@
 label.kuc-checkbox-1-13-0__group__select-menu__item__label {
   color: #333 !important;
 }
-svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon > rect {
+
+svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon>rect {
   stroke: #333 !important;
 }
-svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon > path {
+
+svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon>path {
   fill: #333 !important;
 }
 
@@ -324,4 +326,20 @@ svg.kuc-checkbox-1-13-0__group__select-menu__item__label__icon > path {
 /** 原罪の作業者を変更 **/
 span.gaia-app-statusbar-action.gaia-app-status-reassign {
   display: none;
+}
+
+/*
+ * --------------------------
+ * sweetalert
+ * --------------------------
+ */
+.custom-popup {
+  max-width: none !important;
+  /* 幅制限を解除（必要に応じて最大幅設定） */
+  width: auto !important;
+  /* 自動幅にする */
+}
+
+.custom-deny-button {
+  background-color: #008000 !important;
 }
